# pernect

./: .env  .gitignore  AI_SETUP_PROMPT.md  README.md  Untitled  app.json  eas.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.claude/: CLAUDE.md
agent-service/: .env.example  .gcloudignore  Dockerfile  pyproject.toml
agent-service/app/: auth.py  config.py  main.py
agent-service/app/agents/: client.py  compatibility_expert.py  insight_writer.py  personality_analyst.py  unified_analyst.py
agent-service/app/models/: requests.py  responses.py
agent-service/app/routers/: analysis.py  compatibility.py  health.py
agent-service/app/tools/: big5_tools.py  enneagram_tools.py  last_lover_tools.py  mbti_tools.py  report_tools.py
agent-service/gcp/disable-billing/: main.py  requirements.txt
agent-service/scripts/: deploy.sh
app/: +not-found.tsx  _layout.tsx  ai-chat.tsx  index.tsx  index.tsx.backup
claudedocs/: app-overview-detailed.md  app-overview.md  brand-image-prompts.md  ui-color-scheme-analysis.md
components/: ActionMenu.tsx  BottomNavigation.tsx  CitationInfo.tsx  FriendsMatchScreen.tsx  HomeScreen.tsx  ProfileEditScreen.tsx  ProfileScreen.tsx  ResultComparisonScreen.tsx  ResultHistoryList.tsx  SettingsScreen.tsx  ShareCard.tsx  ShareSheet.tsx  TestListScreen.tsx  TestResultScreen.tsx  TestScreen.tsx  WelcomeScreen.tsx
convex/: ai.ts  aiActions.ts  aiHelpers.ts  auth.config.ts  compatibilityEngine.ts  friendships.ts  http.ts  integratedAnalyses.ts  lastLover.ts  notifications.ts  profileSharing.ts  schema.ts  scoring.ts  (+18 more)
(+164 files in other folders)
